# LegacyLens

./: .gitignore  AGENTS.md  Dockerfile  PRESEARCH.md  README.md  REQUIREMENTS.md  pyproject.toml  railway.toml
docs/: AI_VIDEO_QUESTIONS.md  ARCHITECTURE.md  CORPUS.md  COST-ANALYSIS.md  EMBEDDING-DECISION.md  PRE-SEARCH.md  PRESEARCH.md  REQUIREMENTS-CHECKLIST.md  REQUIREMENTS.md  SETUP.md  SOCIAL-POST.md  SUBMISSION-GATE.md  TASKS.md  TRACEABILITY.md  demo-script.md  demo.md
docs/plans/: 2026-03-02-mvp-rag-foundation.md  2026-03-04-runtime-behavior-retrieval.md  2026-03-04-ui-parity-console.md  2026-03-05-complete-requirements.md  2026-03-05-strict-rag-requirements-enforcement.md
eval/: ground_truth.sample.jsonl  results.sample.jsonl
scripts/: __init__.py  benchmark_ingest.py  deploy.sh  validate_corpus.py  validate_traceability.py
src/legacylens/: __main__.py  answer.py  api.py  cli.py  config.py  dependency_graph.py  embeddings.py  eval.py  ingest.py  models.py  observability.py  retrieval.py  (+2 more)
src/legacylens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_answer.py  test_api.py  test_chunking.py  test_code_understanding.py  test_config.py  test_corpus_size.py  test_dependency_graph.py  test_e2e_queries.py  test_embedding_precision.py  test_fallback.py  test_health.py  test_ingest.py  test_ingest_perf.py  test_model_observability.py  test_perf_coverage.py  test_query_interface.py  test_requirements_gate.py  test_retrieval.py  test_streaming.py  test_structural.py  test_traceability.py  test_vector_store.py  test_web_ui_contract.py
(+21 files in other folders)
